--- a/postgres-cnpg/Dockerfile
+++ b/postgres-cnpg/Dockerfile
@@ -1,5 +1,5 @@
-ARG POSTGRESQL_VERSION=17.4-5-bookworm
-ARG PGMQ_VERSION=1.5.0
+ARG POSTGRESQL_VERSION=18.0-standard-trixie
+ARG PGMQ_VERSION=1.7.0
 
 # consider the new standard model (though barman plugin is experimental) https://github.com/cloudnative-pg/postgres-containers
 FROM ghcr.io/cloudnative-pg/postgresql:${POSTGRESQL_VERSION} AS base
@@ -12,7 +12,7 @@ RUN apt-get update && apt-get install --no-install-recommends --yes \
     && rm -r /var/lib/apt/lists/*
 WORKDIR /build
 ARG PGMQ_VERSION
-ADD https://github.com/tembo-io/pgmq.git#v${PGMQ_VERSION}:pgmq-extension ./
+ADD https://github.com/pgmq/pgmq.git#v${PGMQ_VERSION}:pgmq-extension ./
 RUN make && make install
 
 FROM base
